syntax = "proto3";

option csharp_namespace = "GrpcServer";

package users;

service Users {
  rpc GetUsers (GetUsersRequest) returns (GetUsersReply);
  rpc GetUserByUserName (GetUserByUserNameRequest) returns (GetUserByUserNameReply);
  rpc SaveUser (SaveUserRequest) returns (SaveUserReply);
  rpc GetPaginatedUsers (GetPaginatedUsersRequest) returns (GetPaginatedUsersReply);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserReply);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserReply);
}

// User
message UserMessage {
  string Username = 1;
  string Password = 2;
  bool Admin = 3;
}

// Get user
message GetUsersRequest {}

message GetUsersReply {
  repeated UserMessage UserList = 1;
}

// Get user by username
message GetUserByUserNameRequest {
  string username = 1;
}

message GetUserByUserNameReply {
  UserMessage user = 1;
}

// Save user
message SaveUserRequest {
  UserMessage user = 1;
}

message SaveUserReply {
  UserMessage user = 1;
}

// Get paginated users
message GetPaginatedUsersRequest {
  int32 page = 1;
  int32 pageSize = 2;
}

message GetPaginatedUsersReply {
  int32 TotalElements = 1;
  int32 TotalPages = 2;
  repeated UserMessage Elements = 3;
}

// Update user
message UpdateUserRequest {
  UserMessage User = 1;
}

message UpdateUserReply {
  UserMessage User = 1;
}

// Delete user
message DeleteUserRequest {
  UserMessage User = 1;
}

message DeleteUserReply {}
